# comfyui-replicate

./: node.py  pyproject.toml  requirements.txt  schema_to_node.py  supported_models.json
schemas/: anthropic_claude-3.5-haiku.json  google_nano-banana.json  lucataco_flux-dev-multi-lora.json  openai_gpt-5-nano.json  openai_gpt-5.json  openai_o1-mini.json  openai_o1.json  recraft-ai_recraft-vectorize.json
workflows/: CGI.json
